// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Node Item Mode slot should print directory mode 1`] = `
<span
  className="mode"
>
  dr--------
</span>
`;

exports[`Project Node Item Mode slot should print name simply 1`] = `
<span
  className="mode"
>
  ----------
</span>
`;

exports[`Project Node Item Mode slot should print symlink mode 1`] = `
<span
  className="mode"
>
  lr--------
</span>
`;

exports[`Project Node Item Mode slot should print symlink when directory and symlink are true 1`] = `
<span
  className="mode"
>
  lr--------
</span>
`;
